update services copy and style

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,3 +11,12 @@ body {
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-rgb));
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: theme('colors.indigo.800');
+}
